namespace Barricade.Models
{
    public class FinishField: Field
    {
        public override string ToString()
        {
            return "F";
        }
    }
}