namespace Barricade.Views
{
    public enum Key
    {
        Up,
        Down,
        Left,
        Right,
        Stop,
        Next,
        Enter
    }
}